--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
-    "typescript": "^1.8.10",
+    "jasmine-core": "^3.4.0",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^2.0.1",
     "lite-server": "^2.2.2",
+    "typescript": "^1.8.10",
     "typings": "^1.3.3"
   },
   "author": "",
