--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^2.0.1",
+    "karma-typescript": "^4.0.0",
     "lite-server": "^2.2.2",
     "typescript": "^1.8.10",
     "typings": "^1.3.3"
