--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   },
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-mocks": "^1.7.8",
     "angular-route": "^1.5.8",
     "angular-sanitize": "^1.5.8",
-    "ngstorage": "^0.3.11",
-    "systemjs": "^0.19.37",
-    "systemjs-plugin-json": "^0.1.0",
+    "angular-touch": "^1.5.8",
+    "angular-ui-bootstrap": "^2.1.3",
     "bootstrap": "^3.3.7",
     "jquery": "^1.9.10",
-    "angular-animate": "^1.5.8",
-    "angular-touch": "^1.5.8",
-    "angular-ui-bootstrap": "^2.1.3"
+    "ngstorage": "^0.3.11",
+    "systemjs": "^0.19.37",
+    "systemjs-plugin-json": "^0.1.0"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
