--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "typings install",
     "lite": "lite-server",
     "tsc": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nightwatch .\\tests\\trip-info\\trip-info.component.spec.js"
   },
   "dependencies": {
     "angular": "^1.5.8",
@@ -25,13 +25,10 @@
     "systemjs-plugin-json": "^0.1.0"
   },
   "devDependencies": {
+    "chromedriver": "^74.0.0",
     "concurrently": "^2.2.0",
-    "jasmine-core": "^3.4.0",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^2.0.1",
-    "karma-typescript": "^4.0.0",
     "lite-server": "^2.2.2",
+    "nightwatch": "^1.0.19",
     "typescript": "^1.8.10",
     "typings": "^1.3.3"
   },
